[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-uk-phv-tfl-mcp"
version = "1.0.0"
description = "UK Private Hire Vehicle + Hackney Carriage + TfL licensing compliance. PHV driver + vehicle + operator licences, DBS, safeguarding, journey records. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "phv", "tfl", "hackney", "uber", "bolt", "minicab", "uk-licensing", "dbs", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-uk-phv-tfl-mcp"

[project.scripts]
meok-uk-phv-tfl-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
